--- a/hello-wasi/Cargo.toml
+++ b/hello-wasi/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 wasmtime = "0.38"
-wasmtime-wasi = { version = "0.38", features = ["tokio"] }
+wasmtime-wasi = "0.38"
